--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div id="lead-content">
         <h1>Aniket Ghumed</h1>
         <h2>Software Engineer</h2>
-        <a href="#" class="btn-rounded-white">Download Resume</a>
+        <a href="https://github.com/aniketghumed23/portfolio/blob/main/Aniket_Ghumed_Resume.pdf" class="btn-rounded-white">Download Resume</a>
       </div>
       <!-- End #lead-content -->
 
